# FingerDrawing

./: .gitignore  BuildLinux.sh  CMakeLists.txt  CMakeLists.txt.user.9e04c9c  CMakeLists.txt.user.f5e2b47  TODOList.md  setupfile_script.iss
src/: CMakeLists.txt
src/FingerDrawing/: CMakeLists.txt  mainwindow.ui
src/FingerDrawing/include/: ConnectionManager.hpp  DrawingCam.hpp  FacesRemover.hpp  FingersDetector.hpp  ForegroundExtractor.hpp  Helpers.hpp  MainWindow.hpp  SkinDetector.hpp  timer.hpp
src/FingerDrawing/src/: ConnectionManager.cpp  DrawingCam.cpp  FacesRemover.cpp  FingersDetector.cpp  ForegroundExtractor.cpp  Helpers.cpp  MainWindow.cpp  SkinDetector.cpp  main.cpp
src/FingerDrawing/ui/: MainWindow.cpp  MainWindow.hpp  mainwindow.ui
src/FingerDrawingServer/: CMakeLists.txt
src/FingerDrawingServer/src/: main.cpp
src/include/: Communicator.hpp  DrawingCam.hpp  FacesRemover.hpp  FingerCounter.hpp  FingersDetector.hpp  ForegroundExtractor.hpp  GloveDetector.hpp  Helpers.cpp  Helpers.hpp  SkinDetector.hpp
src/src/: Communicator.cpp  DrawingCam.cpp  FacesRemover.cpp  FingerCounter.cpp  FingersDetector.cpp  ForegroundExtractor.cpp  GloveDetector.cpp  Helpers.cpp  SkinDetector.cpp  main.cpp
